# Lab1_OS

./: .gitignore  CMakeLists.txt  build_linux.sh  build_win.cmd
src/: main.cpp
